syntax = "proto3";

option csharp_namespace = "Shared.Grpc.Models";

package car_service;

import "google/protobuf/timestamp.proto";

message ServiceComment {
  int32 id = 1;
  int32 order_id = 2;
  string content = 3;
  google.protobuf.Timestamp created_at = 4;
}
